<resources>
    <string name="app_name">Hamster Run Kraus Adam</string>
    <string name="left">L</string>
    <string name="down">D</string>
    <string name="reset">Reset</string>
    <string name="eat">Eat</string>
    <string name="zoom">Zoom</string>
    <string name="up">U</string>
    <string name="right">R</string>
    <string name="foodText">Food in Pouches:</string>
    <string name="zoomText">Zoom Power:</string>
    <string name="energyText">Energy:</string>
    <string name="moveText">Moves:</string>
    <string name="homeFoodText">Home Stores:</string>
    <string name="defaultNum">0</string>
    <string name="tintBlue">Tint Hamster Blue</string>
    <string name="tintGreen">Tint Hamster Green</string>
    <string name="tintRed">Tint Hamster Red</string>
    <string name="openTints">Open Hamster Tint Menu</string>
</resources>